--- a/css/base.css
+++ b/css/base.css
@@ -123,11 +123,14 @@ ul.nav li a:hover{
 ------------------------------------------------------------------------------*/
 
 .listing .post{
-  margin:35px 0;
+  margin:40px 0;
+}
+.listing .post:first-child{
+  margin-top:22px;
 }
 
 .listing .post p.date{
-  margin:0 0 -5px 0;
+  margin:0 0 -3px 0;
 }
 
 .listing .post h2{
@@ -136,7 +139,7 @@ ul.nav li a:hover{
   border:none;
 }
 .listing .post h2 a{
-  color:#000;
+  color:#222;
   text-decoration:none;
 }
 
