Add atom feed alternate

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 	<title>{{ page.title }}</title>
 	<link rel="stylesheet" href="/css/base.css" type="text/css" />
+	{{ page.head_content }}
 </head>
 <body>
   <div class="sidebar">
