--- a/css/base.css
+++ b/css/base.css
@@ -314,6 +314,7 @@ pre{
   padding-left:10px;
   border-left:1px solid #eee;
   overflow:auto;
+  -webkit-font-smoothing:subpixel-antialiased;
 }
 pre code{
   display:block;
