--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 	  {% endif %}
 	</title>
 	<link rel="stylesheet" href="/css/base.css" type="text/css" />
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	{{ page.head_content }}
 </head>
 <body>
