--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,3 +4,8 @@ layout: default
 <p class="date">{{ page.date | date: "%B %e, %Y" }}</p>
 <h1>{{ page.title }}</h1>
 {{ content }}
+
+<hr />
+
+<p class="note">Got a question or a comment about this post? Send me an email. Be polite, be reasonable, and I'll respond back and maybe even <a href="/ask">post it to the site</a>.</p>
+<a href="mailto:kneath+ask@gmail.com" class="askme">Ask me anything, just send an email to <strong>kneath+ask@gmail.com</strong></a>
