--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,19 @@
 	<link rel="stylesheet" href="/css/base.css" type="text/css" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	{{ page.head_content }}
+	<script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-146426-5']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
 </head>
 <body>
   <div class="sidebar">
@@ -18,6 +31,7 @@
 
     <ul class="nav">
       <li><a href="/">Home</a></li>
+      <li><a href="/projects">My Projects</a></li>
       <li><a href="/ask">Ask me a question</a></li>
     </ul>
 
