--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,9 @@
 	    Warpspire: Web, Design &amp; Code Geekery
 	  {% endif %}
 	</title>
-	<link rel="stylesheet" href="/css/base.css" type="text/css" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="/css/base.css" type="text/css" />
+	<link rel="alternate" href="http://feeds.feedburner.com/warpspire" type="application/rss+xml/css" />
 	{{ page.head_content }}
 	<script type="text/javascript">
 
