--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
 	</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="/css/base.css" type="text/css" />
-	<link rel="alternate" href="http://feeds.feedburner.com/warpspire" type="application/rss+xml/css" />
-	{{ page.head_content }}
+	<link rel="alternate" href="http://feeds.feedburner.com/warpspire" type="application/rss+xml" />
 	<script type="text/javascript">
 
     var _gaq = _gaq || [];
