--- a/css/base.css
+++ b/css/base.css
@@ -35,7 +35,6 @@ a img{ border:none; }
 body{
   font-family: Helvetica, Arial, sans-serif;
   font-size:12px;
-  -webkit-font-smoothing:antialiased;
   background:#fff;
 }
 
@@ -46,7 +45,6 @@ strong{
 a{
   color:#2382c8;
   text-decoration:none;
-  -webkit-font-smoothing:subpixel;
 }
 a:visited{
   color:#457289;
@@ -194,7 +192,7 @@ ul.nav li a:hover{
 ------------------------------------------------------------------------------*/
 
 .main{
-  color:#333;
+  color:#444;
   line-height:19px;
 }
 
@@ -217,9 +215,9 @@ h2{
 }
 
 h3{
-  margin:15px 0 -10px 0;
+  margin:2.0em 0 -0.75em 0;
   font-size:12px;
-  color:#333;
+  color:#000;
 }
 h3 a, h3 a:visited, h2 a, h2 a:visited{ color:#000; }
 h3 a:hover, h2 a:hover{ color:#000; border:none; }
