Talk list just for @holman

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -5,5 +5,5 @@ layout: default
 
 <hr />
 
-<p class="note">Got a question or a comment about this talk? Send me an email. Be polite, be reasonable, and I'll respond back and maybe even <a href="/ask">post it to the site</a>.</p>
+<p class="note">Got a question or a comment about this talk? Send me an email. Be polite, be reasonable, and I'll respond back. Like my style? I think conferences are awesome and would love to hear about any speaking opportunities you might have.</p>
 <a href="mailto:kneath+ask@gmail.com" class="askme">Ask me anything, just send an email to <strong>kneath+ask@gmail.com</strong></a>
