Who runs this Gist site anyway? Surely not me.

--- a/experiments/css/base.css
+++ b/experiments/css/base.css
@@ -253,9 +253,13 @@ body .gist .gist-file .gist-meta{
   font-weight:300;
   color:#000;
 }
-body .gist .gist-file .gist-meta a{
+body .gist .gist-file .gist-meta a, body .gist .gist-file .gist-meta a:visited{
   color:#000;
   font-weight:bold;
+  text-decoration:none;
+}
+body .gist .gist-file .gist-meta a:hover{
+  text-decoration:underline;
 }
 
 /* @end */
