Add experiments to sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,8 @@
 
     <ul class="nav">
       <li><a href="/">Home</a></li>
-      <li><a href="/talks">Talks &amp; Presentations</a></li>
+      <li><a href="/talks">Talks</a></li>
+      <li><a href="/experiments">Experiments</a></li>
       <li><a href="/projects">Projects</a></li>
       <li><a href="/ask">Ask me a question</a></li>
     </ul>
