--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,5 +7,8 @@ layout: default
 
 <hr />
 
-<p class="note">Got a question or a comment about this post? Send me an email. Be polite, be reasonable, and I'll respond back and maybe even <a href="/ask">post it to the site</a>.</p>
+<p class="note">Got a question or a comment about this post? Send me an email. Be polite, be reasonable, and I'll respond back.</p>
 <a href="mailto:kneath+ask@gmail.com" class="askme">Ask me anything, just send an email to <strong>kneath+ask@gmail.com</strong></a>
+
+<p><a href="http://twitter.com/kneath" class="twitter-follow-button" data-show-count="false">Follow @kneath</a>
+<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script></p>
