Twitter is literally the only thing that matters in life

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,8 @@ layout: default
 <h1>{{ page.title }}</h1>
 {{ content }}
 
-<hr />
+<a href="https://twitter.com/kneath" class="follow-box">
+  <h3>You should probably follow <strong>@kneath</strong> on twitter</h3>
+  <p class="subtext">You’re sure to learn all kinds of interesting facts about cheese, BBQ and perhaps even some ramblings on design, tech and the wonderful internets.</p>
+</a>
 
-<p class="note">Got a question or a comment about this post? Send me an email. Be polite, be reasonable, and I'll respond back.</p>
-<a href="mailto:kneath+ask@gmail.com" class="askme">Ask me anything, just send an email to <strong>kneath+ask@gmail.com</strong></a>
-
-<p><a href="http://twitter.com/kneath" class="twitter-follow-button" data-show-count="false">Follow @kneath</a>
-<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script></p>
