--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {{ content }}
 
-<hr />
-
-<p class="note">Got a question or a comment about this talk? Send me an email. Be polite, be reasonable, and I'll respond back. Like my style? I think conferences are awesome and would love to hear about any speaking opportunities you might have.</p>
-<a href="mailto:kneath+ask@gmail.com" class="askme">Ask me anything, just send an email to <strong>kneath+ask@gmail.com</strong></a>
+<a href="https://twitter.com/kneath" class="follow-box">
+  <h3>You should probably follow <strong>@kneath</strong> on twitter</h3>
+  <p class="subtext">You’re sure to learn all kinds of interesting facts about cheese, BBQ and perhaps even some ramblings on design, tech and the wonderful internets.</p>
+</a>
