--- a/css/base.css
+++ b/css/base.css
@@ -34,7 +34,7 @@ a img{ border:none; }
 
 body{
   font-family: Helvetica, Arial, sans-serif;
-  font-size:12px;
+  font-size:13px;
   background:#fff;
 }
 
@@ -193,7 +193,7 @@ ul.nav li a:hover{
 
 .main{
   color:#444;
-  line-height:19px;
+  line-height:21px;
 }
 
 .main p.date{
@@ -209,14 +209,14 @@ h1{
 
 h2{
   margin:2.0em 0 -0.5em 0;
-  font-size:14px;
+  font-size:16px;
   color:#000;
   border-bottom:1px dotted #BBB;
 }
 
 h3{
   margin:2.0em 0 -0.75em 0;
-  font-size:12px;
+  font-size:13px;
   color:#000;
 }
 h3 a, h3 a:visited, h2 a, h2 a:visited{ color:#000; }
@@ -244,11 +244,12 @@ h4{
   margin:2px 0 0 0;
   padding:5px 7px;
   display:block;
-  font-size:10px;
+  font-size:11px;
   line-height:12px;
   text-align:left;
   color:#666;
   background:#ddd;
+  text-shadow:1px 1px 0 rgba(255,255,255,0.3);
 }
 .figure small strong{
   text-transform:uppercase;
