A little bit darker now

--- a/css/base.css
+++ b/css/base.css
@@ -384,7 +384,7 @@ a.follow-box:hover h3 strong{
   padding:8px 10px;
   font-size:12px;
   font-weight:300;
-  color:#6891a5;
+  color:#506f7f;
   border-top:1px solid #dce7ee;
 }
 
