--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
       <li><a href="/ask">Ask me a question</a></li>
     </ul>
 
-    <p>My name is Kyle Neath. I'm ~designer at <a href="http://github.com" target="_blank">GitHub</a> in San Francisco.</p>
+    <p>My name is Kyle Neath. I'm a ~designer at <a href="http://github.com" target="_blank">GitHub</a> in San Francisco.</p>
     <p>You can find me as <strong>@kneath</strong> on <a href="http://twitter.com/kneath" class="twitter">Twitter</a>, <a href="https://github.com/kneath">GitHub</a>, <a href="http://dribbble.com/players/kneath">Dribbble</a> and pretty much everywhere else.</p>
   </div><!-- /.sidebar -->
 
