--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 <head>
 	<title>
 	  {% if page.title %}
-	    {{ page.title }} &mdash; Warpspire
+	    {{ page.title }} &middot; by Kyle Neath
 	  {% else %}
-	    Warpspire: Web, Design &amp; Code Geekery
+	    Warpspire: Design &amp; Code by Kyle Neath
 	  {% endif %}
 	</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -28,21 +28,8 @@
   </script>
 </head>
 <body>
-  <div class="sidebar">
-    <a href="/" class="logo"><img src="/images/logo.gif" alt="Warpspire" width="203" height="63" /></a>
 
-    <ul class="nav">
-      <li><a href="/">Home</a></li>
-      <li><a href="/talks">Talks</a></li>
-      <li><a href="/experiments">Experiments</a></li>
-      <li><a href="/ask">Ask me a question</a></li>
-    </ul>
-
-    <p>My name is Kyle Neath. I'm a ~designer at <a href="http://github.com" target="_blank">GitHub</a> in San Francisco.</p>
-    <p>You can find me as <strong>@kneath</strong> on <a href="http://twitter.com/kneath" class="twitter">Twitter</a>, <a href="https://github.com/kneath">GitHub</a>, <a href="http://dribbble.com/players/kneath">Dribbble</a> and pretty much everywhere else.</p>
-  </div><!-- /.sidebar -->
-
-  <div class="main">
+  <div class="container">
     {{ content }}
   </div><!-- /.main -->
 
