--- a/css/base.css
+++ b/css/base.css
@@ -73,6 +73,40 @@ hr:before {
   width: 680px;
 }
 
+ul.nav {
+  margin: 0 0 20px 0;
+  padding: 10px 0;
+  list-style-type: none;
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+ul.nav li {
+  margin: 0 20px;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+}
+ul.nav li a {
+  color: #bbb;
+  text-decoration: none;
+}
+
+ul.nav li.logo {
+  text-transform: none;
+}
+ul.nav li.logo a {
+  display: inline-block;
+  width: 27px;
+  height: 27px;
+  line-height: 26px;
+  color: #fff;
+  font-weight: bold;
+  background: #556270;
+  border-radius: 100px;
+  box-shadow: 0 1px 0 rgba(255,255,255,1.0);
+}
+
 /*------------------------------------------------------------------------------
   Home Page
 ------------------------------------------------------------------------------*/
