--- a/css/base.css
+++ b/css/base.css
@@ -70,7 +70,8 @@ hr:before {
 
 .container {
   margin: 0 auto;
-  width: 680px;
+  max-width: 680px;
+  padding: 0 20px;
 }
 
 ul.nav {
@@ -86,6 +87,11 @@ ul.nav li {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 600;
+}
+@media only screen and (max-width: 520px) {
+  ul.nav li {
+    margin: 0 7px;
+  }
 }
 ul.nav li a {
   color: #bbb;
