--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <p class="date">{{ page.date | date: "%B %e, %Y" }}</p>
-<h1>{{ page.title }}</h1>
+<h1 class="words">{{ page.title }}</h1>
 {{ content }}
 
 <div class="keep-in-touch">
