No need for talk headings

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -3,7 +3,8 @@ layout: default
 ---
 {{ content }}
 
-<a href="https://twitter.com/kneath" class="follow-box">
-  <h3>You should probably follow <strong>@kneath</strong> on twitter</h3>
-  <p class="subtext">You’re sure to learn all kinds of interesting facts about cheese, BBQ and perhaps even some ramblings on design, tech and the wonderful internets.</p>
-</a>
+<div class="keep-in-touch">
+  <p>
+    If you'd like to keep in touch, I tweet <a href="https://twitter.com/kneath">@kneath</a> on Twitter. You're also welcome to send a polite email to <a href="mailto:kneath@gmail.com">kneath@gmail.com</a>. I don't always get the chance to respond, but email is always the best way to get in touch.
+  </p>
+</div>
