--- a/css/base.css
+++ b/css/base.css
@@ -154,8 +154,8 @@ ul.nav li.logo a {
   border-left: 1px solid #ddd;
 }
 .listing .post.other h2 {
-  font-size: 14px;
-  line-height: 14px;
+  margin: -5px 0 -15px 0;
+  font-size: 17px;
 }
 .listing .post.other h2 a {
   color: #000;
@@ -193,6 +193,9 @@ p.intro {
   p.intro {
     font-size: 20px;
   }
+}
+p.intro a {
+  color: #777;
 }
 
 h1 {
