--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
 	<script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 	<link rel="stylesheet" href="/css/base.css" type="text/css" />
 	<link rel="alternate" href="http://feeds.feedburner.com/warpspire" type="application/rss+xml" />
+
+  <script type="text/javascript" src="//use.typekit.net/oih2jiw.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<script type="text/javascript">
 
     var _gaq = _gaq || [];
