Tweaks and polishing

--- a/css/base.css
+++ b/css/base.css
@@ -318,6 +318,10 @@ p.note {
   color: #666;
 }
 
+.twitter-tweet-rendered {
+  padding: 10px 0;
+}
+
 /*----------------------------------------------------------------------------
   Follow Box
 ----------------------------------------------------------------------------*/
