Try out fastclick

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,13 @@
     {{ content }}
   </div><!-- /.main -->
 
+  <script type="text/javascript" src="/js/fastclick.js"></script>
+  <script type="text/javascript">
+    window.addEventListener('load', function() {
+        new FastClick(document.body);
+    }, false);
+  </script>
+
   <script type="text/javascript">
     (function() {
       var t   = document.createElement('script');
