--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,4 +9,22 @@ layout: default
   <p>
     If you'd like to keep in touch, I tweet <a href="https://twitter.com/kneath">@kneath</a> on Twitter. You're also welcome to send a polite email to <a href="mailto:kneath@gmail.com">kneath@gmail.com</a>. I don't always get the chance to respond, but email is always the best way to get in touch.
   </p>
+  <p class="comments">
+    Comments on Warpspire are currently an experiment and <strong>heavily moderated</strong>. If you are not contributing to the discussion or being an ass, I will remove you. This is not a free country.
+  </p>
 </div>
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'warpspire';
+    var disqus_identifier = '{{ page.url }}';
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
