--- a/css/base.css
+++ b/css/base.css
@@ -243,7 +243,9 @@ h1.words {
   color: #DB2C17;
 }
 h1.link {
+  margin-top: 0;
   font-size: 32px;
+  line-height: 1.2;
 }
 h1.link .desc {
   font-weight: normal;
@@ -380,14 +382,23 @@ p.note {
   margin: 30px 0;
   color: #aaa;
   border-top: 1px solid #dfe4ea;
+  border-bottom: 1px solid #fff;
 }
 .keep-in-touch p:first-child {
   margin-top: 0;
   padding-top: 20px;
   border-top: 1px solid #fff;
 }
+.keep-in-touch p:last-child {
+  margin-bottom: 0;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #dfe4ea;
+}
 .keep-in-touch a {
   color: #666;
+}
+.keep-in-touch .comments {
+  font-style: italic;
 }
 
 @media only screen and (max-width: 520px) {
