A new direction for Warpspire

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
   <div class="container">
     <header>
       <ul class="nav">
-        <li><a href="/">Words</a></li>
-        <li><a href="/talks">Talks</a></li>
+        <li><a href="/opinion">Opinion</a></li>
+        <li><a href="/talks">Reviews</a></li>
         <li class="logo"><a href="/">w</a></li>
         <li><a href="/experiments">Experiments</a></li>
         <li><a href="/about">About</a></li>
