--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     <header>
       <ul class="nav">
         <li><a href="/opinion">Opinion</a></li>
-        <li><a href="/talks">Reviews</a></li>
+        <li><a href="/reviews">Reviews</a></li>
         <li class="logo"><a href="/">w</a></li>
         <li><a href="/experiments">Experiments</a></li>
         <li><a href="/about">About</a></li>
