Nicer comment wording

--- a/_layouts/link.html
+++ b/_layouts/link.html
@@ -7,7 +7,7 @@ layout: default
 
 <div class="keep-in-touch">
   <p class="comments">
-    Comments on Warpspire are currently an experiment and <strong>heavily moderated</strong>. If you are not contributing to the discussion or being an ass, I will remove you. This is not a free country.
+    Comments on Warpspire are currently an experiment. Please, try to be a good human (or you will be removed).
   </p>
 </div>
 
