--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
     If you'd like to keep in touch, I tweet <a href="https://twitter.com/kneath">@kneath</a> on Twitter. You're also welcome to send a polite email to <a href="mailto:kneath@gmail.com">kneath@gmail.com</a>. I don't always get the chance to respond, but email is always the best way to get in touch.
   </p>
   <p class="comments">
-    Comments on Warpspire are currently an experiment and <strong>heavily moderated</strong>. If you are not contributing to the discussion or being an ass, I will remove you. This is not a free country.
+Comments on Warpspire are currently an experiment. Please, try to be a good human (or you will be removed).
   </p>
 </div>
 
