Link to the raw feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 	<script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 	<link rel="stylesheet" href="/css/base.css" type="text/css" />
-	<link rel="alternate" href="http://feeds.feedburner.com/warpspire" type="application/rss+xml" />
+	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
 
   <script type="text/javascript" src="//use.typekit.net/oih2jiw.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
