--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,11 +36,11 @@
   <div class="container">
     <header>
       <ul class="nav">
-        <li><a href="/opinion">Opinion</a></li>
-        <li><a href="/reviews">Reviews</a></li>
-        <li class="logo"><a href="/">w</a></li>
-        <li><a href="/experiments">Experiments</a></li>
         <li><a href="/about">About</a></li>
+				<li><a href="/projects">Projects</a></li>
+        <li class="logo"><a href="/">w</a></li>
+				<li><a href="/opinion">Opinion</a></li>
+        <li><a href="/talks">Talks</a></li>
       </ul>
     </header>
 
