--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
     If you'd like to keep in touch, I tweet <a href="https://twitter.com/kneath">@kneath</a> on Twitter. You're also welcome to send a polite email to <a href="mailto:kyle@warpspire.com">kyle@warpspire.com</a>. I don't always get the chance to respond, but email is always the best way to get in touch.
   </p>
   <p class="comments">
-Comments on Warpspire are currently an experiment. Please, try to be a good human (or you will be removed).
+I really like having comments on my site, but I also know how they turn out more often than not. Please try to be a decent human.
   </p>
 </div>
 
