Get rid of FastClick

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,18 +18,21 @@
   <script type="text/javascript" src="//use.typekit.net/oih2jiw.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<script type="text/javascript">
+var _gaq = _gaq || []
+_gaq.push(["_setAccount", "UA-146426-5"])
+_gaq.push(["_trackPageview"])
 
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-146426-5']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-  </script>
+;(function() {
+  var ga = document.createElement("script")
+  ga.type = "text/javascript"
+  ga.async = true
+  ga.src =
+    ("https:" == document.location.protocol ? "https://ssl" : "http://www") +
+    ".google-analytics.com/ga.js"
+  var s = document.getElementsByTagName("script")[0]
+  s.parentNode.insertBefore(ga, s)
+})()
+</script>
 </head>
 <body>
 
@@ -47,25 +50,17 @@
     {{ content }}
   </div><!-- /.main -->
 
-  <script type="text/javascript" src="/js/fastclick.js"></script>
   <script type="text/javascript">
-    window.addEventListener('load', function() {
-        new FastClick(document.body);
-    }, false);
-  </script>
-
-  <script type="text/javascript">
-    (function() {
-      var t   = document.createElement('script');
-      t.type  = 'text/javascript';
-      t.async = true;
-      t.id    = 'gauges-tracker';
-      t.setAttribute('data-site-id',
-                     '4dd8683cf5a1f53796000001');
-      t.src = '//secure.gaug.es/track.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(t, s);
-    })();
-  </script>
+  ;(function() {
+  var t = document.createElement("script")
+  t.type = "text/javascript"
+  t.async = true
+  t.id = "gauges-tracker"
+  t.setAttribute("data-site-id", "4dd8683cf5a1f53796000001")
+  t.src = "//secure.gaug.es/track.js"
+  var s = document.getElementsByTagName("script")[0]
+  s.parentNode.insertBefore(t, s)
+})()
+</script>
 </body>
 </html>
